2006-07-03  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.18~.

2006-06-19  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.17.

2006-06-19  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (send_app_died): New variable, false by default.
	(release_child_slot): Only send the signal if send_app_died is true.
	(main): Add new '--send-app-died' argument.

2006-06-15  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.16.

2006-06-15  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (sigs_init): Ignore SIGPIPE.
	(sig_restore): Set SIGPIPE to the default handler.

2006-06-15  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.16~.

2006-06-09  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.15.

2006-06-08  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/comm_dbus.c: Relicense to GPL version 2 only. Change
	copyright holder to "Nokia Corporation".
	* launcher/comm_dbus.h: Likewise.
	* launcher/defender.c: Likewise.
	* launcher/invoker.c: Likewise.
	* launcher/invokelib.c: Likewise.
	* launcher/invokelib.h: Likewise.
	* launcher/launcher.c: Likewise.
	* launcher/report.c: Likewise.
	* launcher/report.h: Likewise.
	* launcher/ui.h: Likewise.
	* launcher/ui_gtk.c: Likewise.
	* launcher/ui_gtk.h: Likewise.
	* client/client.c: Likewise.

2006-06-08  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.15~.

2006-05-18  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.14.

2006-05-18  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/Makefile.am (MAEMO_LAUNCHER): New macro.
	(maemo_defender_CPPFLAGS): Pass MAEMO_LAUNCHER as a macro.
	* launcher/defender.c: Include <stdbool.h>, <sys/types.h>,
	<sys/stat.h> and <unistd.h>.
	(is_same_file): New function.
	(have_valid_parent): Likewise.
	(main): Call have_valid_parent and die if not true.
